tests/front_end/input/type_errors/wrong_return_value.wl
//E<2:1>: Cannot return string instead of int
int main() {
    return "Hello";
}